[혜원]자동결제 코드를 빼먹음

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -264,6 +264,11 @@
                 document.querySelectorAll('.credit-option').forEach(opt => opt.classList.remove('selected'));
                 targetOption.classList.add('selected');
                 selectedOption = targetOption;
+                // 잠깐 대기 후 자동으로 결제 진행
+                setTimeout(() => {
+                    console.log(`${selectedCredit} 크레딧 자동 결제 시작`);
+                    requestpay();
+                }, 1000); // 1초 대기 후 결제창 실행
             }
             // sessionStorage에서 selectedCredit 제거 (한 번만 사용)
             sessionStorage.removeItem('selectedCredit');
