--- a/public/success.html
+++ b/public/success.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>결제 성공 - 크레딧 구매 완료</title>
     <style>
+        :root {
+            /*--pc: #4ade80;*/
+            --pc: #41c66a;
+        }
+
+        body {
+            background: #000;
+        }
+
         .container {
             max-width: 600px;
             margin: 40px auto;
@@ -19,7 +28,7 @@
 
         .success-icon {
             font-size: 60px;
-            color: #00c471;
+            color: var(--pc);
             margin-bottom: 20px;
         }
 
@@ -59,7 +68,7 @@
 
         .back-button {
             display: inline-block;
-            background-color: #3182f6;
+            background-color: #229e49;
             color: white;
             border: none;
             border-radius: 6px;
@@ -72,7 +81,7 @@
         }
 
         .back-button:hover {
-            background-color: #1c6fdc;
+            background-color: #176a36;
         }
 
         .user-highlight {
