--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -14,104 +14,278 @@
     <title>결제창</title>
     <!-- 기존 스타일 유지 -->
     <style>
-        /* 기존 스타일 그대로 유지 */
+        :root {
+            /*--pc: #4ade80;*/
+            --pc: #41c66a;
+        }
+
         body {
+            height: 1600px;
             font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
+            /*background-color: #1c1d1f;*/
+            background-color: #000;
         }
 
         .container {
+            max-width: 1280px;
+            height: 1500px;
             width: 100%;
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 40px;
+            margin: 0 auto;
+            position: relative;
+            padding-top: 128px;
         }
 
         h1 {
-            font-size: 28px;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 10px;
+            font-size: 4.5rem;
+            font-weight: 900;
+            /*color: var(--pc);*/
+            color: #8ffda4;;
+            padding-bottom: 10px;
+            margin-bottom: 0;
         }
 
         .user-info {
-            background-color: #e3f2fd;
-            padding: 10px 15px;
             border-radius: 8px;
             display: inline-block;
-            margin-bottom: 20px;
+            color: #fff;
+            padding-bottom: 164px;
+            font-size: 30px;
         }
 
         .user-id {
             font-weight: bold;
-            color: #1c6fdc;
         }
 
         .credit-options {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-            gap: 20px;
-            margin-bottom: 40px;
+            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+            gap: 55px 30px;
+            padding: 0 100px;
         }
 
         .credit-option {
-            background-color: #fff;
+            padding: 50px;
+            /*background-color: #fff;*/
+            /*background-color: #f0f4ff;*/
+            background-color: #f7f7f7;
             border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            padding: 25px 20px;
-            text-align: center;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: transform 0.5s, box-shadow 0.2s;
             cursor: pointer;
-            border: 2px solid transparent;
+            outline: 3px solid #000;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            position: relative;
+            /*overflow: hidden;*/
         }
 
-        .credit-option:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        /*.credit-option::before {*/
+        /*    content: '-10%';*/
+        /*    position: absolute;*/
+        /*    width: 100px;*/
+        /*    height: 50px;*/
+        /*    top: 5px;*/
+        /*    left: 10px;*/
+        /*    background: red;*/
+        /*    border-radius: 20px;*/
+        /*    display: flex;*/
+        /*    justify-content: center;*/
+        /*    align-items: center;*/
+        /*    font-size: 15px;*/
+        /*    font-weight: bold;*/
+        /*    color: #000;*/
+        /*}*/
+
+        /*.credit-option::after {*/
+        /*    content: '';*/
+        /*    position: absolute;*/
+        /*    width: 450px;*/
+        /*    height: 300px;*/
+        /*    bottom: -115px;*/
+        /*    left: -50px;*/
+        /*    border-radius: 100%;*/
+        /*    background: #4e5059;*/
+        /*    opacity: 0.1;*/
+        /*}*/
+
+        @keyframes gray {
+            0% {
+                transform: translateY(-6%);
+                filter: grayscale(60%);
+            }
+
+            20% {
+                filter: grayscale(0%);
+            }
+
+            50% {
+                filter: grayscale(100%);
+            }
+
+            100% {
+                transform: translateY(0%);
+                filter: grayscale(0%);
+            }
         }
 
+        @keyframes jumping {
+            0% {
+                transform: translateY(5%);
+                filter: brightness(102%);
+            }
+
+            100% {
+                transform: translateY(0%);
+            }
+        }
+
+        @keyframes coin {
+            0% {
+                opacity: 0;
+                transform: translateY(-60%);
+                filter: brightness(100%);
+            }
+
+            50% {
+                opacity: 1;
+                transform: translateY(0%);
+            }
+
+            80% {
+                opacity: 0;
+                transform: translateY(60%);
+            }
+
+            100% {
+                opacity: 0;
+            }
+        }
+
+        @keyframes coins {
+            0% {
+                opacity: 0;
+                transform: translateY(-60%);
+            }
+
+            30% {
+                opacity: 1;
+                transform: translateY(0%);
+            }
+
+            60% {
+                opacity: 0;
+            }
+
+            70% {
+                transform: translateY(60%);
+            }
+
+            100% {
+                opacity: 0;
+            }
+        }
+
+        .credit-option:hover,
         .credit-option.selected {
-            border-color: #3182f6;
-            background-color: #f8f9ff;
+            outline: 4px solid #24974f;
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.5);
+        }
+
+        .credit-option:hover .img_wrap,
+        .credit-option.selected .img_wrap {
+            animation: jumping 0.5s ease-in-out infinite alternate;
+        }
+
+        /*.credit-option:hover .img_wrap img,*/
+        /*.credit-option.selected .img_wrap img {*/
+        /*    transition: transform 0.5s;*/
+        /*    transform: scale(135%);*/
+        /*}*/
+
+        .img_wrap {
+            width: 150px;
+            padding-bottom: 50px;
+        }
+
+        .img_wrap img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        @keyframes bangbang {
+            0%   { transform: rotateY(0deg); }
+            100% { transform: rotateY(360deg); }
+        }
+
+        .credit-option:nth-of-type(1):hover .img_wrap {
+            animation: bangbang 3s linear infinite;
+        }
+
+        .credit-option:nth-of-type(6) .img_wrap {
+            position: relative;
+        }
+
+        .credit-option:nth-of-type(6) .img_wrap>img:nth-child(1),
+        .img_wrap>img:nth-child(3) {
+            position: absolute;
+            left: -35px;
+        }
+
+        .credit-option:nth-of-type(6) .img_wrap>img:nth-child(3) {
+            position: absolute;
+            left: 48px;
+            bottom: 0;
+        }
+
+        .credit-option:nth-of-type(6):hover .img_wrap>img:nth-child(1),
+        .credit-option:nth-of-type(6).selected .img_wrap>img:nth-child(1) {
+            animation: coin 2s ease-in-out infinite;
+        }
+
+        .credit-option:nth-of-type(6):hover .img_wrap>img:nth-child(3),
+        .credit-option:nth-of-type(6).selected .img_wrap>img:nth-child(3) {
+            animation: coin 2s ease-in-out infinite;
         }
 
         .credit-amount {
-            font-size: 24px;
+            font-size: 35px;
             font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
+            color: #121212;
+            position: relative;
+            display: flex;
+            justify-content: center;
         }
 
-        .credit-price {
-            font-size: 18px;
-            color: #666;
-            margin-bottom: 15px;
+        .credit-amount::before {
+            content: '';
+            position: absolute;
+            width: 150px;
+            height: 10px;
+            top: -35px;
+            border-radius: 90%;
+            background: radial-gradient(circle, rgba(0,0,0,0.08) 0%, rgba(0,0,0,0) 100%);
         }
 
         .purchase-button {
-            display: block;
             width: 100%;
-            max-width: 300px;
-            margin: 0 auto;
-            background-color: #3182f6;
-            color: white;
+            padding: 15px 25px;
             border: none;
             border-radius: 8px;
-            padding: 15px 25px;
+            background-color: #229e49;
+            color: white;
             font-size: 18px;
+            font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.2s;
+            transition: background-color 0.4s;
         }
 
         .purchase-button:hover {
-            background-color: #1c6fdc;
+            /*background: linear-gradient(90deg, rgb(76 166 194 / 59%), #41c66a);*/
+            background-color: #176a36;
         }
 
         .purchase-button:disabled {
@@ -121,65 +295,114 @@
 
         .most-popular {
             position: relative;
-            overflow: hidden;
         }
 
-        .most-popular::before {
-            content: '인기';
+        .most-popular::after {
             position: absolute;
-            top: 0;
-            right: 0;
-            background-color: #ff5722;
-            color: white;
-            padding: 5px 10px;
-            font-size: 12px;
-            transform: rotate(45deg) translateX(10px) translateY(-10px);
-            width: 80px;
-            text-align: center;
+            content: 'best!';
+            width: 100px;
+            height: 50px;
+            background: #00c471;
+            border-radius: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 25px;
+            font-weight: bold;
+            color: #121212;
+            top: -20px;
+        }
+
+        .background {
+            height: 1200px;
+            width: 3092px;
+            right: -5.666vw;
+            /*background: linear-gradient(90deg, #000 7.62%, rgb(76 166 194 / 59%) 1280px, #41c66a);*/
+            background: linear-gradient(90deg, #000 59% 1280px, #111827);
+            position: absolute;
+            top: 310px;
+            z-index: -1;
+            border-radius: 0 256px 64px 0;
+        }
+
+        /*임시!! 지울것.*/
+        #header {
+            background: #000;
+        }
+
+        #header>.inner {
+            height: 80px;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            line-height: 2rem;
+            color: #fff;
+            font-weight: 900;
         }
     </style>
 </head>
+
 <body>
 <!-- 기존 HTML 구조 그대로 유지 -->
+<header id="header">
+    <div class="inner">
+        <h1 class="logo">BangtalBoyBand</h1>
+    </div>
+</header>
 <div class="container">
-    <header>
-        <h1>크레딧 상점</h1>
-        <div class="user-info">
-            사용자: <span id="user-id" class="user-id">로딩중...</span>
-        </div>
-    </header>
+    <h1>크레딧 상점</h1>
+    <div class="user-info">
+        환영합니다! <span id="user-id" class="user-id">로딩중...</span>님!
+    </div>
     <div class="credit-options">
         <div class="credit-option" data-credit="100" data-price="1000">
+            <div class="img_wrap">
+                <img src="/img/key1.png" alt="열쇠1">
+            </div>
             <div class="credit-amount">100 크레딧</div>
-            <div class="credit-price">1,000원</div>
+            <button class="purchase-button" onclick="requestpay()">₩ 1,000</button>
         </div>
         <div class="credit-option" data-credit="300" data-price="2700">
+            <div class="img_wrap">
+                <img src="/img/key2.png">
+            </div>
             <div class="credit-amount">300 크레딧</div>
-            <div class="credit-price">2,700원</div>
-            <div class="credit-bonus">10% 추가 적립</div>
+            <button class="purchase-button" onclick="requestpay()">₩ 2,700</button>
         </div>
         <div class="credit-option most-popular" data-credit="500" data-price="4000">
+            <div class="img_wrap">
+                <img src="/img/key3.png">
+            </div>
             <div class="credit-amount">500 크레딧</div>
-            <div class="credit-price">4,000원</div>
-            <div class="credit-bonus">20% 추가 적립</div>
+            <button class="purchase-button" onclick="requestpay()">₩ 4,000</button>
         </div>
         <div class="credit-option" data-credit="1000" data-price="7500">
+            <div class="img_wrap">
+                <img src="/img/key4.png">
+            </div>
             <div class="credit-amount">1,000 크레딧</div>
-            <div class="credit-price">7,500원</div>
-            <div class="credit-bonus">25% 추가 적립</div>
+            <button class="purchase-button" onclick="requestpay()">₩ 7,500</button>
         </div>
         <div class="credit-option" data-credit="2000" data-price="14000">
+            <div class="img_wrap">
+                <img src="/img/key5.png">
+            </div>
             <div class="credit-amount">2,000 크레딧</div>
-            <div class="credit-price">14,000원</div>
-            <div class="credit-bonus">30% 추가 적립</div>
+            <button class="purchase-button" onclick="requestpay()">₩ 14,000</button>
         </div>
         <div class="credit-option" data-credit="5000" data-price="30000">
+            <div class="img_wrap">
+                <img src="/img/calenderCoin3d.png" alt="이미지">
+                <img src="/img/key5.png" alt="열쇠상자">
+                <img src="/img/calenderCoins3d.png" alt="이미지">
+            </div>
             <div class="credit-amount">5,000 크레딧</div>
-            <div class="credit-price">30,000원</div>
-            <div class="credit-bonus">50% 추가 적립</div>
+            <button class="purchase-button" onclick="requestpay()">₩ 30,000</button>
         </div>
     </div>
-    <button id="purchase-button" class="purchase-button" onclick="requestpay()">구매하기</button>
+    <div class="background" data-aos="fade-up-left" data-aos-duration="600" data-aos-anchor=".main_buisness"
+         data-aos-anchor-placement="top"></div>
 </div>
 
 <script>
@@ -439,6 +662,22 @@
             }
         });
     }
+
+    function selectAndPay(button) {
+        const optionDiv = button.closest('.credit-option');
+        if (!optionDiv) return;
+
+        // 이전 선택 해제
+        document.querySelectorAll('.credit-option').forEach(opt => opt.classList.remove('selected'));
+
+        // 현재 선택 적용
+        optionDiv.classList.add('selected');
+        selectedOption = optionDiv;
+
+        // 결제 실행
+        requestpay();
+    }
+
 
     // 크레딧 옵션 클릭 처리
     document.querySelectorAll('.credit-option').forEach(option => {
