[혜원]테스트

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -358,7 +358,7 @@
     <div class="credit-options">
         <div class="credit-option" data-credit="100" data-price="1000">
             <div class="img_wrap">
-                <img src="/img/key1.png" alt="열쇠1">
+                <img src="./img/key1.png" alt="열쇠1">
             </div>
             <div class="credit-amount">100 크레딧</div>
             <button class="purchase-button" onclick="requestpay()">₩ 1,000</button>
