[혜원]파비콘 설정

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://static.toss.im/icons/png/4x/icon-toss-logo.png"/>
+    <link rel="icon" href="/img/icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 아임포트 연동-->
     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
