--- a/public/success.html
+++ b/public/success.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="https://static.toss.im/icons/png/4x/icon-toss-logo.png"/>
+    <link rel="icon" href="/img/icon.png"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>결제 성공 - 크레딧 구매 완료</title>
@@ -85,11 +85,10 @@
         }
 
         .user-highlight {
-            background-color: #e3f2fd;
             border-radius: 4px;
             padding: 2px 6px;
             font-weight: bold;
-            color: #1c6fdc;
+            color: var(--pc);
         }
 
         .error-message {
