--- a/public/success.html
+++ b/public/success.html
@@ -12,6 +12,11 @@
             --pc: #41c66a;
         }
 
+        ::selection {
+            background: var(--pc);
+            color: #ffffff;
+        }
+
         body {
             background: #000;
         }
