--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -26,6 +26,7 @@
 
         body {
             height: 1600px;
+            overflow-x: hidden;
             font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
             /*background-color: #1c1d1f;*/
             background-color: #000;
@@ -62,6 +63,7 @@
         }
 
         .credit-options {
+            position: relative;
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
             gap: 55px 30px;
@@ -318,14 +320,14 @@
             top: -20px;
         }
 
-        .background {
+        .credit-options .background {
             height: 1200px;
             width: 3092px;
             right: -5.666vw;
             /*background: linear-gradient(90deg, #000 7.62%, rgb(76 166 194 / 59%) 1280px, #41c66a);*/
             background: linear-gradient(90deg, #000 59% 1280px, #111827);
             position: absolute;
-            top: 310px;
+            top: -112px;
             z-index: -1;
             border-radius: 0 256px 64px 0;
         }
@@ -407,9 +409,9 @@
             <div class="credit-amount">5,000 크레딧</div>
             <button class="purchase-button" onclick="ButtonClick(event)">₩ 30,000</button>
         </div>
+        <div class="background" data-aos="fade-up-left" data-aos-duration="600" data-aos-anchor=".main_buisness"
+             data-aos-anchor-placement="top"></div>
     </div>
-    <div class="background" data-aos="fade-up-left" data-aos-duration="600" data-aos-anchor=".main_buisness"
-         data-aos-anchor-placement="top"></div>
 </div>
 
 <script>
@@ -629,6 +631,7 @@
             // pg: 'nice_v2',
             pg: 'kakaopay',
             // pg: 'tosspay',
+            // pg: 'payco',
             pay_method: 'card',
             merchant_uid: `payment-${new Date().getTime()}`,
             name: productName,
