--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -680,6 +680,16 @@
                 iframes.forEach(iframe => iframe.remove());
                 console.log('결제 실패/취소 처리');
                 console.log('실패 코드와 메시지', rsp.error_code, rsp.error_msg);
+            } else if (rsp.success === true && rsp.imp_uid && rsp.merchant_uid) {
+                console.log('결제 완료 처리 (imp_uid와 merchant_uid 존재)');
+                sessionStorage.setItem('orderId', rsp.merchant_uid);
+                sessionStorage.setItem('amount', amount.toString());
+                sessionStorage.setItem('orderName', productName);
+                sessionStorage.setItem('method', rsp.pay_method || '카드');
+                sessionStorage.setItem('paymentKey', rsp.imp_uid);
+                sessionStorage.setItem('creditAmount', selectedOption.getAttribute('data-credit'));
+                sessionStorage.setItem('userId', document.getElementById('user-id').textContent);
+                sendToServer(rsp);
             } else if (rsp.imp_uid && rsp.merchant_uid) {
             // 현재 success도, error_code도 undefined이기에 단순하게 imp_uid와 merchant_uid 존재만으로 성공 판단
                 console.log('결제 완료 처리 (imp_uid와 merchant_uid 존재)');
