--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://static.toss.im/icons/png/4x/icon-toss-logo.png"/>
+    <link rel="icon" href="/img/icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>사용자 인증</title>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
