[혜원]위치 수정

--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -426,6 +426,7 @@
             gap: 30px;
             align-items: center;
             padding-top: 40px;
+            justify-items: center;
         }
 
         .modal .pg_btns > button {
