[혜원] 디자인 일부수정

--- a/public/success.html
+++ b/public/success.html
@@ -93,7 +93,7 @@
             border-radius: 4px;
             padding: 2px 6px;
             font-weight: bold;
-            color: var(--pc);
+            color: #309750;
         }
 
         .error-message {
