--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -80,11 +80,11 @@
             padding: 50px;
             /*background-color: #fff;*/
             /*background-color: #f0f4ff;*/
-            background-color: #f7f7f7;
-            border-radius: 12px;
+            /*background-color: #f7f7f7;*/
+            border-radius: 75px;
             transition: transform 0.5s, box-shadow 0.2s;
             cursor: pointer;
-            outline: 3px solid #000;
+            /*outline: 3px solid #000;*/
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -204,7 +204,7 @@
         .credit-option.selected {
             outline: 4px solid #24974f;
             transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.5);
+            box-shadow: 0 5px 15px rgba(255, 255, 255, 0.7);
         }
 
         .credit-option:hover .img_wrap,
@@ -264,6 +264,7 @@
             font-size: 35px;
             font-weight: bold;
             color: #121212;
+            color: #fff;
             position: relative;
             display: flex;
             justify-content: center;
@@ -283,7 +284,7 @@
             width: 100%;
             padding: 15px 25px;
             border: none;
-            border-radius: 8px;
+            border-radius: 50px;
             background-color: #229e49;
             color: white;
             font-size: 18px;
@@ -364,7 +365,7 @@
             background: white;
             border: 1px solid #ccc;
             border-radius: 8px;
-            padding: 30px;
+            padding: 70px 50px;
             z-index: 1;
         }
 
