--- a/public/credit-shop.html
+++ b/public/credit-shop.html
@@ -313,14 +313,15 @@
             width: 100px;
             height: 50px;
             background: #00c471;
-            border-radius: 20px;
+            border-radius: 50px;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 25px;
             font-weight: bold;
             color: #121212;
-            top: -20px;
+            top: 30px;
+            right: 17px;
         }
 
         .credit-options .background {
